fix button alignment

--- a/css/login.css
+++ b/css/login.css
@@ -32,6 +32,10 @@
     margin-bottom: 0;
 }
 
+#grav-login .button {
+    vertical-align: middle;
+}
+
 #grav-login .delimiter {
     display: block;
     font-size: 1.6rem;
